--- a/GHMS.Client/wwwroot/index.html
+++ b/GHMS.Client/wwwroot/index.html
@@ -12,6 +12,7 @@
     <link href="GHMS.styles.css" rel="stylesheet" />
     <link href="_content/Syncfusion.Blazor/styles/bootstrap5.css" rel="stylesheet" />
     <link href="https://cdn.syncfusion.com/ej2/31.1.20/material.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
